--- a/final_report_tex/acronyms.tex
+++ b/final_report_tex/acronyms.tex
@@ -9,3 +9,4 @@
 \newacronym{tcn}{TCN}{Temporal Convolutional Network}
 \newacronym{erm}{ERM}{Elman Recurrent Network}
 \newacronym{mlp}{MLP}{Machine Learning Program}
+\newacronym{lrdecay)}{lrDecay)}{learning rate decay}
