--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -45,6 +45,7 @@
 \usepackage[pdftex]{graphicx}
 \graphicspath{{images/}}
 \usepackage{tikz,filecontents}
+\usetikzlibrary{matrix,calc}
 \usetikzlibrary{shapes,arrows,shadings,patterns}
 \usepackage{pgfplots}
 \pgfplotsset{compat=newest}
@@ -78,7 +79,7 @@
 \begin{document}
 %
 % paper title
-% Titles are generally capitalized except for words such as a, an, and, as,
+% Titles are generally ized except for words such as a, an, and, as,
 % at, but, by, for, in, nor, of, on, or, the, to and up, which are usually
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
@@ -161,7 +162,23 @@ For the application of Deep Learning to crack growth for \gls{rul} prediction ba
 
 In a work done by Akrim \cite{Akrim} the Paris-Erdogan Law \cite{Paris1963} was used to create a synthetic dataset of crack growth to train the model. The dataset consists of strain data from virtual strain gauges placed in the area around the crack and the corresponding \gls{rul} of the fuselage panels.
 
-The Paris-Erdogan Law is applied to an infinite plate as shown in Figure XXX. The strain gauges are placed in a 45°-Angle at the positions shown in Table XXX relative to the center of the plate. The crack length in the Paris-Erdogan Law is a function of: $k$ number of cylces, $\Delta \sigma$ stress range, $m, C$ material constants, $a_0$ initial crack length. By calculating the crack growth until the crack length $a$ reaches the critical crack length $a_{crit}=(\frac{K_{IC}}{\Delta \sigma \sqrt{\pi}})^2$ the simulation can determine the \gls{rul} for each simulated cycle. For the simulations the stress range $\Delta \sigma$ is kept constant while the initial crack length $a_0$ and the material parameters $m$ and $C$ are drawn from a normal distribution. 10000 structures are generated this way to form the training and validation dataset. For the testing dataset 100 structures are generated. The output of theses simulations which form the input for the deep learning models is a table matching the strains from the strain gauges to the \gls{rul} calculated by the simulations. To reduce the dataset the results are only saved to the table every 500 cycles. Table XXX shows an excerpt of the generated training and validation dataset.
+The Paris-Erdogan Law is applied to an infinite plate as shown in Figure XXX. The strain gauges are placed in a 45°-Angle at the positions shown in Table XXX relative to the center of the plate. The crack length in the Paris-Erdogan Law is a function of: $k$ number of cylces, $\Delta \sigma$ stress range, $m, C$ material constants, $a_0$ initial crack length. By calculating the crack growth until the crack length $a$ reaches the critical crack length $a_{crit}=(\frac{K_{IC}}{\Delta \sigma \sqrt{\pi}})^2$ the simulation can determine the \gls{rul} for each simulated cycle. For the simulations the stress range $\Delta \sigma$ is kept constant while the initial crack length $a_0$ and the material parameters $m$ and $C$ are drawn from a normal distribution. $ 10000 $ structures are generated this way to form the training and validation dataset. For the testing dataset 100 structures are generated. The output of theses simulations which form the input for the deep learning models is a table matching the strains from the strain gauges to the \gls{rul} calculated by the simulations. To reduce the dataset the results are only saved to the table every 500 cycles. Table \ref{tab:sliding_window_approach} shows the structure of the generated training and validation dataset. The label $ ID $ denotes the specific structures.
+
+\begin{table}[htp]
+	\centering
+	\caption{Training and validation dataset structure}
+	\label{tab:sliding_window_approach}
+	\begin{tabular}{lllllll}
+		$ t $ & $ ID $ & $ cycle $ & $ \epsilon_1 $     & $ \epsilon_2 $     & $ \epsilon_3 $     & $ RUL_{bin} $   \\
+		\hline
+		$ 1 $ & $ 1 $  & $ 0 $     & $ \epsilon_{1,1} $ & $ \epsilon_{2,1} $ &  $ \epsilon_{3,1} $ &  $ RUL_{bin,1} $ \\
+		$ 2 $ & $ 1 $  & $ 500 $   & $ \epsilon_{1,2} $ & $ \epsilon_{2,2} $ & $ \epsilon_{3,2} $ & $ RUL_{bin,2} $ \\
+		$ 3 $ & $ 1 $  & $ 1000 $  & $ \epsilon_{1,3} $ & $ \epsilon_{2,3} $ & $ \epsilon_{3,3} $ & $ RUL_{bin,3} $ \\
+		$ 4 $ & $ 1 $  & $ 1500 $  & $ \epsilon_{1,4} $ & $ \epsilon_{2,4} $ & $ \epsilon_{3,4} $ & $ RUL_{bin,4} $ \\
+		\vdots & \vdots & \vdots & \vdots & \vdots &\vdots & \vdots \\
+		$ n $ & $ 10000 $  & $ N_{f,10000} $  & $ \epsilon_{1,5} $ & $ \epsilon_{2,5} $ & $ \epsilon_{3,5} $ & $ RUL_{bin,5} $
+	\end{tabular}
+\end{table}
 
 The aim of this work is to predict the \gls{rul} based on current and past information from the 3 strain gauges using deep learning models. Different Deep Learning model architectures are to be used for that. The developed models must be trained and optimized before a comparison between them is made.
 
@@ -175,7 +192,23 @@ The aim of this work is to predict the \gls{rul} based on current and past infor
 
 As it showed promising results in other applications of Deep Learning to \gls{phm} (\cite{Liu2019a, Xiao2016}), classification is an interesting alternative to regression for \gls{rul} prediction. Instead of trying to predict an exact \gls{rul} value the goal is to predict the correct \gls{rul} class with a lower and upper bound for the \gls{rul}.
 
-To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t_i $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sequence. The resulting input matrix therefore has the dimension $ k \times N $ where $ k $ is the number of features.
+To prepare the data for the \gls{cnn} a sliding window approach was used. This approach maps the \gls{rul} at time $ t $ onto the current and past time steps of the input features $ [x_{t-N+1}, x_{t-N+2},..., x_{t-1}, x_t] $ where $ N $ is the length of the sliding window. The resulting input matrix therefore has the dimension $ (n-N) \times N \times k $ where $ n $ is the number of samples and $ k $ is the number of features. Figure \ref{fig:input_matrix} shows an example of how the time series data of the strain gauges from Table \ref{tab:sliding_window_approach} is mapped to the input matrix.
+
+\begin{figure}[htp]
+	\centering
+	\input{images/input_matrix.tex}
+	\caption{Input matrix for the neural networks}
+	\label{fig:input_matrix}
+\end{figure}
+
+The output matrix shown in Figure \ref{fig:output_matrix} is only one dimensional. It is only composed of the \gls{rul} bins which are mapped to the corresponding rows in the input matrix the dimension therefore is $ (n-N) $.
+
+\begin{figure}[htp]
+	\centering
+	\input{images/output_matrix.tex}
+	\caption{Input matrix for the neural networks}
+	\label{fig:output_matrix}
+\end{figure}
 
 % Add details on the explenation of the RNN Deep Learning models (Thomas)
 
@@ -191,33 +224,43 @@ The common type of Deep Learning model for time series prediction are \glspl{rnn
 
 Recent results suggest that \glspl{cnn} can match or even outperform \glspl{rnn} in time series related tasks \cite{Bai2018}. The second major focus of this work are therefore \gls{cnn} models.
 
-The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension. \cite{Akrim2021}
+The common \gls{cnn} models deal with 2-Dimensional data as input such as pictures. The time sequence data used for \gls{phm} is in 1-Dimensional format. For this application 1D-\gls{cnn} have been introduced. The key differences between them and the 2D-\glspl{cnn} are that their input data is reduced by one dimension and the convolution filter only slides in one dimension \cite{Akrim2021}. Figure \ref{fig:1D_cnn_architecture} shows an example of a simple \gls{cnn} architecture with an illustration of the filter sliding over the time series. 
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[width=6cm]{1D_CNN_Architecture.png}
-	\caption{Example for an 1D-\gls{cnn} architecture \cite{Sayyad}}
-	\label{fig:1D-cnn-architecture}
+	\includegraphics[width=0.5\textwidth]{1D_CNN_Architecture.png}
+	\caption{Example of an 1D-\gls{cnn} architecture \cite{Sayyad}}
+	\label{fig:1D_cnn_architecture}
 \end{figure}
 
-Besides the general \gls{cnn} architectures \glspl{tcn} (Bai et al. \cite{Bai2018}) are investigated in this work. A \gls{tcn} is a specific \gls{cnn} architecture that tries to replicate some of the best practices for \gls{cnn} architectures. As depicted in Fig. \ref{fig:tcn-architecture} a \gls{tcn} is composed of convolutional layers which include dilation. Through dilation \glspl{tcn} can increase their receptive field and therefore capture relationships over longer time sequences. For more details on \glspl{tcn} see \cite{Bai2018}.
+Besides the general \gls{cnn} architectures \glspl{tcn} (Bai et al. \cite{Bai2018}) are investigated in this work. A \gls{tcn} is a specific \gls{cnn} architecture that tries to replicate some of the best practices for \gls{cnn} architectures. As depicted in Fig. \ref{fig:tcn_architecture} a \gls{tcn} is composed of multiple layers which include dilation. The dilation for each layer can be set arbitrary but it is common practice to use multiples of $ 2 $ for it. Through dilation \glspl{tcn} can increase their receptive field and therefore capture relationships over longer time sequences. One \gls{tcn} layer is composed of a \gls{tcn} residual block (see Figure \ref{fig:tcn_block} (a)). One block consists of two dilated convolutional layers. The activation function for the layers is always the ReLu function. The residual blocks include dropout and normalization layers between the convolutional layers. The blocks also include an optional skip connection with a 1x1 convolutional layer. Figure \ref{fig:tcn_block} (b) shows an exemplary \gls{tcn} block with a kernel size of $ k = 3 $ and a dilation of $ d = 1 $. For more details on \glspl{tcn} see \cite{Bai2018}.
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[width=6cm]{tcn_architecture.pdf}
+	\includegraphics[width=7cm]{tcn_architecture.pdf}
 	\caption{\gls{tcn} with dilation factors d = 1; 2; 4 and filter size k = 3 \cite{Bai2018}}
-	\label{fig:tcn-architecture}
+	\label{fig:tcn_architecture}
 \end{figure}
 
-% Given an overview of the used evaluation metrics and why they are used (Paul)
+\begin{figure}[htp]
+	\centering
+	\subfloat[][]{\includegraphics[width=0.2\textwidth]{tcn_block.pdf}}
+	\qquad
+	\subfloat[][]{\includegraphics[width=0.2\textwidth]{tcn_block_example.pdf}}
+	\caption{\gls{tcn} block elements, (a): Generic \gls{tcn} block, (b): Example for a \gls{tcn} block \cite{Bai2018}}
+	\label{fig:tcn_block}
+\end{figure}
 
-%Write about the loss function
+% Maybe list the used frameworks (Keras, Tensoflow etc.)(Paul)
+
+\noindent
+\textbf{Metric and loss function}
 
 To evaluate the performance of developed models a metric is needed. As the networks are used to perform classification instead of regression the accuracy metric is used. This metric calculates how many of the predictions made with the dataset are correct (e.g. the right \gls{rul} range is predicted)
 
 \begin{equation}
 	\label{eq:categorical-cross-entrophy}
-	Accuracy = \frac{Number of correct predictions}{Total number of predictions}.
+	Accuracy = \frac{Number \: of \: correct \: predictions}{Total \: number \: of \: predictions}.
 \end{equation}
 
 This metric is applied during training and validation to compare different models against each other. The final assessment of the models is made by applying the accuracy metric to the testing dataset.
@@ -231,16 +274,59 @@ The used loss function which is used as the objective function for minimization 
 
 where $ s_j $ is the output of the network for Class $ j $ with $ s_p $ beeing the positive class.
 
-
-
 % Details on the hyperparameter optimization strategies (how the models are trained and how their parameters are optimised) (Paul)
+
+\noindent
+\textbf{Hyperparameter Optimization}
+
+To optimize the proposed network architectures a hyperparameter optimization is performed. The hyperparameters include the parameters for the training process (Learning rate and batch size), network parameters (Dropout rate, activation funciton etc.) and the network architecture itself (number of layers, size of the layers etc.).
+
+There are different strategies for hyperparameter optimization which can be divided in Model-Free and Model-Based approaches. For this study only Model-Free approaches are considered as they are more common and easier to apply. The two common approaches are grid search and random search \cite{Feurer2019}. 
+
+For grid search the user defines a discrete number of values for each parameter. The algorithm then tries out all possible combinations of these sets of values. This quickly leads to an exesive amount of training runs that need to be done as the number of possible combinations $ B $ grows exponentially with the dimensionality $ d $ of the search space. If the number of values per parameter is $ n = 3 $ and the dimensionality is just $ d = 5 $ the number of combinations already equals $ B = n^d = 243 $.
+
+Random search works with a fixed number of evaluations where for each evaluation a value randomly is selected from a predefined set of values for each parameter. The set of values can either be continuous with a lower and upper bound for the values or a discrete set of predefined values. Random search works better than grid search when some parameters are more important than others, which is a property that holds true in many cases \cite{Feurer2019}. Figure \ref{fig:grid_search_random_search} illustrates this property for one important and one unimportant parameter. With a fixed amount of $ B $ evaluations random search can evaluate up to $ B $ different values for each parameter. Whereas grid search is limited to $ B^{1/N} $ values per parameter. It is expected that the networks in this study behave like most networks with regard to the varying importance of the hyperparameters and therefore random search is choosen for hyperparameter optimization.
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=7cm]{grid_search_random_search.pdf}
+	\caption{Comparison of grid search and random search for an important and a unimportant parameter with 9 evaluations \cite{Feurer2019}}
+	\label{fig:grid_search_random_search}
+\end{figure}
+
+To select the best model after performing the hyperparameter optimization the accuracy of the model on the validation dataset is used.
+
+\noindent
+\textbf{Fine Tuning}
+
+After the optimum parameters for a model are found the model can be further improved by running more training epochs. To do so the models are trained with \gls{lrdecay)}. The best model from the hyperparameter optimization is taken and trained for a predefined number of epochs on the learning rate which was identified as the best one on the optimization. The learning rate is then lowered before the model is trained again for a fixed number of epochs. This step is repeated until convergence is achieved and no more significant improvements are visible. By using this approach the model in the early stages of training is less likely to get stuck in a local minimum and explores a wider range of possible configurations. As the training comes closer to an optimum the decaying learning rate helps with convergence and avoid oscillations. Besides this common beliefs there are probably more reasons to the effectiveness of \gls{lrdecay)}. According to You et al. \cite{You2019} is the initially large learning rate preventing the network from memorizing noisy data while the decaying learnig rate helps with learning complex patterns in the dataset.
+
 
 \section{Results}
 \label{sec:results}
 
 % Show the used model architectures for rnn and cnn and why they are used (Paul and Thomas)
 
+\noindent
+\textbf{Model architectures}
+
+Based on the \gls{cnn} architecture of Li et al. \cite{Li2018} which was used for aero-engine \gls{rul} prediction a vanilla \gls{cnn} architecture is generated. The first layer of the architecture is for layer normalization. Afterwards a flexible number of 1D-convolutional layers is added which all have the same number of filters and an identical kernel size. The output of the convolutional layers is flattend before the final dense output layer which has $ 20 $ nodes to match the number of \gls{rul} classes $ C = 20 $. As an example Figure \ref{fig:cnn_architecture_1000_structures} shows the final architecture after the hyperparameter optimization with 1000 training structures.
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[width=0.5\textwidth]{cnn_architecture_1000_structures.pdf}
+	\caption{\gls{cnn} architecture after hyperparameter optimization with 1000 training structures}
+	\label{fig:cnn_architecture_1000_structures}
+\end{figure}
+
+A \gls{tcn} architecture template is generated based on the results of Liu et al. \cite{Liu2019} who used the network for \gls{rul} prediction of roller bearings. The architecture consists of multiple \gls{tcn} residual blocks with a dilation increasing with multiples of 2 with the first layer having a dilation of $ d = 1 $. Each block features the same number of filters with an identical kernel size. The next layer after the \gls{tcn} blocks is the dense output layer which has $ 20 $ nodes to match the number of \gls{rul} classes $ C = 20 $. The skip connection layer is activated for all residual blocks.
+
 % Give an overview of the results of the hyperparameter optimisation strategies for the rnn and cnn networks (Paul and Thomas)
+
+\noindent
+\textbf{Hyperparameter optimisation}
+
+
 
 % Show the detailed results of the fine tuning of some networks (Paul and Thomas)
 
